# cortex_rag

./: .env.example  .gitignore  README.md  pyproject.toml
data/eval/: questions.json
docs/: GUIDE_EN.md  GUIDE_PL.md
examples/: questions.example.json
src/cortex/: __main__.py  chunker.py  cli.py  config.py  evaluator.py  generator.py  logging_utils.py  retriever.py  scraper.py  store.py  visualizer.py
