[project]
name = "cortex-rag"
version = "0.1.0"
description = "A CLI knowledge worker for technical articles"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.3.0",
    "chromadb>=1.0.0",
    "huggingface-hub>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic-settings>=2.7.0",
    "rich>=14.0.0",
    "typer>=0.15.0",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
cortex = "cortex.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-ra", "-v", "--strict-markers"]
markers = [
    "slow: tests that take a long time",
    "integration: tests requiring external services",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]